--- a/AWSLambdaDemoApplication/src/main/resources/application.properties
+++ b/AWSLambdaDemoApplication/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-aws.accessKey=AKIAQW2JRFFMP4VMSX5A
-aws.secretKey=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
+aws.accessKey=
+aws.secretKey=
 aws.s3BucketName=tanvilambdabucket
 #aws.Region=ap-south-1
 #aws.s3EndpointUrl=https://tanvilambdabucket.s3.ap-south-1.amazonaws.com/AWSLambdaDemoApplication-0.0.1-SNAPSHOT.jar
